Added venn diagram, confusion matrix, precision, recall, f1-score.

--- a/figure4.ipynb
+++ b/figure4.ipynb
@@ -5,13 +5,23 @@
    "metadata": {},
    "source": [
     "# MMS SITL Ground Loop: Figure 4\n",
-    "This notebook reproduces Figure 4 of **Argall, et al. 2020**."
+    "This notebook reproduces Figure 4 of **Argall, Small, et al. 2020**.\n",
+    "\n",
+    "**CONTENTS**\n",
+    "* [Front Matter](#front_matter)\n",
+    "* [Configurable Parameters](#inputs)\n",
+    "* [Metric Calculations](#metric)\n",
+    "* [Burst Selections](#selections)\n",
+    "* [Histogram Overlap](#histogram)\n",
+    "* [Venn Diagram](#venn_diagram)\n",
+    "* [Confusion Matrix, Precision, Recall, F1 Score](#f1_score)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='front_matter'></a>\n",
     "## Front matter"
    ]
   },
@@ -23,15 +33,21 @@
    "source": [
     "import pathlib\n",
     "import datetime as dt\n",
+    "import pymms\n",
     "from pymms.sdc import selections as sel\n",
-    "import matplotlib.pyplot as plt"
+    "from pymms.sdc import mrmms_sdc_api as api\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib_venn import venn3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Input Parameters\n",
+    "<a id='inputs'></a>\n",
+    "## Configurable Parameters\n",
     "The figure plots data from SROI 1 only between 19 Oct. 2019, which is when the GLS was fully implemented, and 25 Mar. 2020, a few days before the paper was submitted. To reproduce the plots in the supplemental material, set `sroi=None` and `sroi=3`."
    ]
   },
@@ -42,7 +58,7 @@
    "outputs": [],
    "source": [
     "sroi = 1\n",
-    "outdir = '~/Desktop/mp-dl-unh/'\n",
+    "outdir = pymms.config['dropbox_root'] + '/gls_figures/'\n",
     "start_date = dt.datetime(2019, 10, 19)\n",
     "end_date = dt.datetime(2020, 3, 25, 18, 44, 46)\n",
     "\n",
@@ -60,7 +76,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metric\n",
+    "<a id='metric'></a>\n",
+    "## Metric Calculations\n",
     "A function to calculate and histogram the overlap between selections."
    ]
   },
@@ -205,8 +222,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='selections'></a>\n",
     "## Burst Selections\n",
-    "Get the ABS, GLS, and SITL burst selections. Filter by SROI and determine which SITL selections were classified as magnetopause crossings."
+    "Get the SITL, ABS, and GLS burst selections. Filter by SROI and determine which SITL selections were classified as magnetopause crossings."
    ]
   },
   {
@@ -230,7 +248,7 @@
     "    sitl_data = [s for s in sitl_data if s.sroi == sroi]\n",
     "    gls_data = [s for s in gls_data if s.sroi == sroi]\n",
     "\n",
-    "sitl_mp_data = sel.filter_segments(sitl_data, '(MP|Magnetopause)')"
+    "sitl_mp_data = sel.filter_segments(sitl_data, '(MP|MPause|Magnetopause)')"
    ]
   },
   {
@@ -265,7 +283,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Figure\n",
+    "<a id='histogram'></a>\n",
+    "## Histogram Overlap\n",
     "Here, we create the figure. `plot_metric` will determine the overlap between each class of selections, plot a histogram of the results, and annotate the figure with summary statistics."
    ]
   },
@@ -326,20 +345,358 @@
     "                             nbins=nbins)\n",
     "ax, abs_mp_gls = plot_metric(abs_mp_data, gls_data, fig,\n",
     "                             ('ABS MP', 'GLS'), (4, 3, nrows, ncols),\n",
-    "                             nbins=nbins)\n",
-    "\n",
+    "                             nbins=nbins)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the figure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the figure\n",
     "if outdir is not None:\n",
     "    sroi_str = ''\n",
     "    if do_sroi:\n",
     "        sroi_str = '_sroi{0:d}'.format(sroi)\n",
     "    filename = (outdir\n",
-    "                / '_'.join(('selections_metric' + sroi_str,\n",
+    "                / '_'.join(('histogram_metric' + sroi_str,\n",
     "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
     "                            end_date.strftime('%Y%m%d%H%M%S')\n",
     "                            )))\n",
     "    filename = filename.with_suffix('.png')\n",
     "    plt.savefig(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='venn_diagram'></a>\n",
+    "## Venn Diagram\n",
+    "An alternative way of viewing the overlap between SITL, ABS, and GLS selections is with a Venn diagram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All segments\n",
+    "#  - ABS segements that overlapped with at least one SITL segment\n",
+    "#  - GLS segements that overlapped with at least one SITL segment\n",
+    "#  - GLS segements that overlapped with at least one ABS segment\n",
+    "#  - GLS segements that overlapped with at least one SITL-ABS segment\n",
+    "sitl_abs_data = [segment\n",
+    "                 for segment in abs_data\n",
+    "                 if sel.selection_overlap(segment, sitl_data)['n_selections'] > 0]\n",
+    "sitl_gls_data = [segment\n",
+    "                 for segment in gls_data\n",
+    "                 if sel.selection_overlap(segment, sitl_data)['n_selections'] > 0]\n",
+    "abs_gls_data = [segment\n",
+    "                for segment in gls_data\n",
+    "                if sel.selection_overlap(segment, abs_data)['n_selections'] > 0]\n",
+    "sitl_abs_gls_data = [segment\n",
+    "                     for segment in gls_data\n",
+    "                     if sel.selection_overlap(segment, sitl_abs_data)['n_selections'] > 0]\n",
+    "\n",
+    "# MP Segments\n",
+    "#  - ABS segements that overlapped with at least one SITL MP segment\n",
+    "#  - GLS segements that overlapped with at least one SITL MP segment\n",
+    "#  - GLS segements that overlapped with at least one SITL MP-ABS segment\n",
+    "sitl_mp_abs_data = [segment\n",
+    "                    for segment in abs_data\n",
+    "                    if sel.selection_overlap(segment, sitl_mp_data)['n_selections'] > 0]\n",
+    "sitl_mp_gls_data = [segment\n",
+    "                    for segment in gls_data\n",
+    "                    if sel.selection_overlap(segment, sitl_mp_data)['n_selections'] > 0]\n",
+    "sitl_mp_abs_gls_data = [segment\n",
+    "                        for segment in gls_data\n",
+    "                        if sel.selection_overlap(segment,\n",
+    "                                                 sitl_mp_abs_data\n",
+    "                                                 )['n_selections'] > 0\n",
+    "                        ]\n",
+    "\n",
+    "# Numbers for Venn diagram\n",
+    "n_sitl = len(sitl_data)\n",
+    "n_abs = len(abs_data)\n",
+    "n_sitl_abs = len(sitl_abs_data)\n",
+    "n_gls = len(gls_data)\n",
+    "n_sitl_gls = len(sitl_gls_data)\n",
+    "n_abs_gls = len(abs_gls_data)\n",
+    "n_sitl_abs_gls = len(sitl_abs_gls_data)\n",
+    "\n",
+    "# Numbers for Venn diagram\n",
+    "n_sitl_mp = len(sitl_mp_data)\n",
+    "n_sitl_mp_abs = len(sitl_mp_abs_data)\n",
+    "n_sitl_mp_gls = len(sitl_mp_gls_data)\n",
+    "n_sitl_mp_abs_gls = len(sitl_mp_abs_gls_data)\n",
+    "\n",
+    "# Setup the figure\n",
+    "fig = plt.figure(figsize=(7, 4))\n",
+    "\n",
+    "# Venn Diagram: All Selections\n",
+    "ax = fig.add_subplot(1, 2, 1)\n",
+    "venn3(subsets=[n_sitl, n_abs, n_sitl_abs,\n",
+    "               n_gls, n_sitl_gls, n_abs_gls,\n",
+    "               n_sitl_abs_gls\n",
+    "               ],\n",
+    "      set_labels=['SITL', 'ABS', 'GLS'],\n",
+    "      alpha=0.4, ax=ax\n",
+    "      )\n",
+    "plt.title('All Selections')\n",
+    "\n",
+    "# Venn Diagram: MP Selections\n",
+    "ax = fig.add_subplot(1, 2, 2)\n",
+    "venn3(subsets=[n_sitl_mp, n_abs, n_sitl_mp_abs,\n",
+    "               n_gls, n_sitl_mp_gls, n_abs_gls,\n",
+    "               n_sitl_mp_abs_gls\n",
+    "               ],\n",
+    "      set_labels=['SITL', 'ABS', 'GLS'],\n",
+    "      alpha=0.4, ax=ax\n",
+    "      )\n",
+    "plt.title('Magnetopause Selections')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the figure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the figure\n",
+    "if outdir is not None:\n",
+    "    sroi_str = ''\n",
+    "    if do_sroi:\n",
+    "        sroi_str = '_sroi{0:d}'.format(sroi)\n",
+    "    filename = (outdir\n",
+    "                / '_'.join(('venn_diagram' + sroi_str,\n",
+    "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
+    "                            end_date.strftime('%Y%m%d%H%M%S')\n",
+    "                            )))\n",
+    "    filename = filename.with_suffix('.png')\n",
+    "    plt.savefig(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='f1_score'></a>\n",
+    "## Confusion Matrix, Precion, Recall, and F1 Score\n",
+    "Assess the model by creating the confusion matrix and computing the precision, recall, and F1 score. To do this, we need to first determine all possible time stamps for which the STIL can make selections."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selection_time_stamps(start_time, end_time, sc='mms1', method='mdq'):\n",
+    "    '''\n",
+    "    Find all times available to the SITL for selection. The SITL\n",
+    "    can make a selection whenever an MDQ is defined. MDQs are defined\n",
+    "    in the ABS and SITL selection files as the `'timestamp'` field.\n",
+    "    \n",
+    "    Params\n",
+    "    ------\n",
+    "    start_time, end_time : `datetime.datetime`\n",
+    "        Time interval in which to create time stamps\n",
+    "    sc : str\n",
+    "        Reference spacecraft for SROI boundaries. Used only if\n",
+    "        `method='sroi'`\n",
+    "    method : str\n",
+    "        Method by which to create time stamps. Options are 'sroi'\n",
+    "        and 'mdq'. Time stamps for the former are tied to the begin\n",
+    "        and end times of each SROI and are spacecraft-specific. In\n",
+    "        the latter case, time stamps are taken from MDQ values,\n",
+    "        which are spacecraft independent.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    time_stamps : `np.array(dtype='int64')`\n",
+    "        All times at which a SITL could have made a selection.\n",
+    "    '''\n",
+    "    if method == 'sroi':\n",
+    "        # Create a time array for each sroi\n",
+    "        orbit_0 = api.time_to_orbit(start_time, sc=sc)\n",
+    "        orbit_1 = api.time_to_orbit(end_time, sc=sc)\n",
+    "    \n",
+    "        # Loop through the SROIs\n",
+    "        time_stamps = np.empty(0, dtype='int64')\n",
+    "        for orbit in range(orbit_0, orbit_1 + 1):\n",
+    "            sroi = sdc.mission_events('sroi', orbit, orbit, sc=sc)\n",
+    "            for tstart, tend in zip(sroi['tstart'], sroi['tend']):\n",
+    "                # Convert SROI interval to TAI seconds\n",
+    "                tai_start = api.datetime_to_tai(tstart)\n",
+    "                tai_stop = api.datetime_to_tai(tend)\n",
+    "                tai_start = tai_start - (tai_start % t_delta)\n",
+    "                tai_stop = tai_stop - (tai_stop % t_delta)\n",
+    "    \n",
+    "                # Create a pandas dataframe with tai_sroi as the index\n",
+    "                time_stamps = np.append(time_stamps,\n",
+    "                                        np.arange(tai_start,\n",
+    "                                                  tai_stop,\n",
+    "                                                  t_delta)\n",
+    "                                        )\n",
+    "\n",
+    "    elif method == 'mdq':\n",
+    "        # This is how I would retrieve all possible\n",
+    "        # times that could be selected by the SITL. I would (1) ignore ROI\n",
+    "        # information provided by SDC, (2) retrieve ABS or SITL sav files,\n",
+    "        # and (3) look for the TIMESTAMPS tag. These timestamps define the\n",
+    "        # start time of every \"cycle\" (It is called \"buffer\" if selected by\n",
+    "        # the SITL). So, 10.0 needs to be added to the end time to get the\n",
+    "        # end time of the timestamps. I would repeat these commands for all\n",
+    "        # ABS files. Note that, after the dynamic SITL window system is\n",
+    "        # introduced, a time range in one ABS file can be overlapped with a\n",
+    "        # time range in another ABS file. \n",
+    "    \n",
+    "        # Get all ABS selection data within the time interval\n",
+    "        abs_data = api.burst_selections('abs', start_time, end_time)\n",
+    "    \n",
+    "        # Multiple duplicate/overlapping ABS files can be submitted per orbit/roi\n",
+    "        # Also, since files only contain start time, some data can be outside\n",
+    "        # the given time interval.\n",
+    "        time_stamps = np.unique(abs_data['timestamps'])\n",
+    "        \n",
+    "        # Trim time stamps to time interval\n",
+    "        tai_tstart = api.datetime_to_tai(start_time)\n",
+    "        tai_tend = api.datetime_to_tai(end_time)\n",
+    "        time_stamps = time_stamps[((time_stamps >= tai_tstart)\n",
+    "                                   & (time_stamps <= tai_tend))\n",
+    "                                   ]\n",
+    "\n",
+    "    return time_stamps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we use the SITL selections as the ground truth to compute the model scores for the ABS and GLS."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate all possible time stamps\n",
+    "t = selection_time_stamps(start_date, end_date, method='mdq')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time cadence at which the SITL can make selections\n",
+    "t_delta = seconds=10\n",
+    "\n",
+    "# Selections are made up of 10-second duration burst buffers. Burst\n",
+    "# buffers begin at multiples of 10-seconds in TAI time. A selection\n",
+    "# of duration 60 seconds contains 6 burst buffers.\n",
+    "\n",
+    "# Time stamps for 'sitl+back' are from the begin time of the first\n",
+    "# burst buffer to the begin time of the last burst buffer, so that\n",
+    "# adjacent selections are separated by 10 seconds.\n",
+    "\n",
+    "# Time stamps for all other selections are from the begin time of\n",
+    "# the first burst buffer to the end time of the last burst buffer,\n",
+    "# so that adjacent selections are separated by 0 seconds.\n",
+    "\n",
+    "# Selections are only possible in the SROI when MMS is in fast\n",
+    "# survey mode. Selections occur on multiples of 10-seconds in TAI\n",
+    "# time. To build up the time stamps, take the begin time of an\n",
+    "# SROI and round down to the nearest 10s TAI time, take the end\n",
+    "# time of the same SROI and round up to the nearest 10s TAI time,\n",
+    "# then fill between at a cadence of 10 seconds.\n",
+    "\n",
+    "# Create a pandas DataFrame to make indexing by timestamps simple\n",
+    "npts = len(t)\n",
+    "tai_sroi = pd.Index(t)\n",
+    "df = pd.DataFrame(index=tai_sroi)\n",
+    "df['sitl'] = np.zeros(npts, dtype='bool')\n",
+    "df['abs'] = np.zeros(npts, dtype='bool')\n",
+    "df['gls'] = np.zeros(npts, dtype='bool')\n",
+    "\n",
+    "# Python array slicing is exclusive [start, stop). Time stamps `t` are\n",
+    "# the begin time of each \"cycle\" that can be selected by the sitl.\n",
+    "\n",
+    "# 'sitl' selection begin at the begin time of a cycle and extend to the\n",
+    "# end time of the last cycle. This end time is excluded automatically by\n",
+    "# Python slicing.\n",
+    "\n",
+    "# 'abs' and 'gls' selections, however, extend from the begin time of the\n",
+    "# first cycle to the begin time of the last cycle. To ensure that the last\n",
+    "# cycle is included in the results, extend each segment to the end of the\n",
+    "# cycle.\n",
+    "for segment in sitl_data:\n",
+    "    df.loc[segment.taistarttime:segment.taiendtime, 'sitl'] = True\n",
+    "for segment in abs_data:\n",
+    "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'abs'] = True\n",
+    "for segment in gls_data:\n",
+    "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'gls'] = True\n",
+    "\n",
+    "# Confusion matrix elements\n",
+    "gls = {}\n",
+    "gls['true_positive'] = (df.sitl & df.gls).sum()\n",
+    "gls['false_positive'] = (~df.sitl & df.gls).sum()\n",
+    "gls['true_negative'] = (~df.sitl & ~df.gls).sum()\n",
+    "gls['false_negative'] = (df.sitl & ~df.gls).sum()\n",
+    "gls['recall'] = (gls['true_positive']\n",
+    "                 / (gls['true_positive'] + gls['false_negative']))\n",
+    "gls['precision'] = (gls['true_positive']\n",
+    "                    / (gls['true_positive'] + gls['false_positive']))\n",
+    "gls['f1_score'] = 2 * (gls['precision'] * gls['recall']) / (gls['precision'] + gls['recall'])\n",
+    "\n",
+    "abs = {}\n",
+    "abs['true_positive'] = (df.sitl & df['abs']).sum()\n",
+    "abs['false_positive'] = (~df.sitl & df['abs']).sum()\n",
+    "abs['true_negative'] = (~df.sitl & ~df['abs']).sum()\n",
+    "abs['false_negative'] = (df.sitl & ~df['abs']).sum()\n",
+    "abs['recall'] = (abs['true_positive']\n",
+    "                 / (abs['true_positive'] + abs['false_negative']))\n",
+    "abs['precision'] = (abs['true_positive']\n",
+    "                    / (abs['true_positive'] + abs['false_positive']))\n",
+    "abs['f1_score'] = 2 * (abs['precision'] * abs['recall']) / (abs['precision'] + abs['recall'])\n",
+    "\n",
+    "# Print Results\n",
+    "print('GLS:')\n",
+    "print('  True Positive:  {}'.format(gls['true_positive']))\n",
+    "print('  False Positive: {}'.format(gls['false_positive']))\n",
+    "print('  True Negative:  {}'.format(gls['true_negative']))\n",
+    "print('  False Negative: {}'.format(gls['false_negative']))\n",
+    "print('  Precision:      {}'.format(gls['precision']))\n",
+    "print('  Recall:         {}'.format(gls['recall']))\n",
+    "print('  F1 Score:       {}'.format(gls['f1_score']))\n",
+    "print('ABS:')\n",
+    "print('  True Positive:  {}'.format(abs['true_positive']))\n",
+    "print('  False Positive: {}'.format(abs['false_positive']))\n",
+    "print('  True Negative:  {}'.format(abs['true_negative']))\n",
+    "print('  False Negative: {}'.format(abs['false_negative']))\n",
+    "print('  Precision:      {}'.format(abs['precision']))\n",
+    "print('  Recall:         {}'.format(abs['recall']))\n",
+    "print('  F1 Score:       {}'.format(abs['f1_score']))"
    ]
   }
  ],
