Choose new times for Figure 3 after time-to-orbit fix. Plot |B| underneath components. Add confusion matrix for GLS compared to SITL MP.

--- a/figure3_table3.ipynb
+++ b/figure3_table3.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "# Where to save files and figures. Set to None to prevent output\n",
-    "outdir = None"
+    "import pymms\n",
+    "outdir = pymms.config['gls_root'] + '/gls_paper'\n",
+    "fig_type = 'png' # png, jpg, svg, eps, ..."
    ]
   },
   {
@@ -72,7 +74,7 @@
     "i_clim = (3, 18.5)\n",
     "e_clim = (12, 21.5)\n",
     "b_lim = (-40, 75)\n",
-    "n_lim = (5e-1, 2e1)\n",
+    "n_lim = (5e-1, 1e2)\n",
     "sel_lim = (0, 200)"
    ]
   },
@@ -91,8 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t0 = dt.datetime(2019, 10, 22, 19, 0, 0)\n",
-    "t1 = dt.datetime(2019, 10, 22, 23, 10, 0)\n",
+    "t0 = dt.datetime(2019, 11, 5, 19, 15, 0)\n",
+    "t1 = dt.datetime(2019, 11, 5, 20, 45, 0)\n",
     "orbit = api.time_to_orbit(t0)\n",
     "sroi = 1"
    ]
@@ -176,7 +178,7 @@
     "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.png'.format(orbit, sroi))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
     "plt.show()"
    ]
   },
@@ -195,8 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t0 = dt.datetime(2019, 12, 17, 18, 15, 0)\n",
-    "t1 = dt.datetime(2019, 12, 17, 18, 55, 0)\n",
+    "t0 = dt.datetime(2019, 11, 16, 7, 15, 0)\n",
+    "t1 = dt.datetime(2019, 11, 16, 8, 45, 0)\n",
     "orbit = api.time_to_orbit(t0)\n",
     "sroi = 1"
    ]
@@ -282,7 +284,7 @@
     "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.png'.format(orbit, sroi))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
     "plt.show()"
    ]
   },
@@ -301,8 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t0 = dt.datetime(2020, 1, 17, 19, 30, 0)\n",
-    "t1 = dt.datetime(2020, 1, 17, 21, 0, 0)\n",
+    "t0 = dt.datetime(2020, 1, 17, 19, 50, 0)\n",
+    "t1 = dt.datetime(2020, 1, 17, 20, 30, 0)\n",
     "orbit = api.time_to_orbit(t0)\n",
     "sroi = 3"
    ]
@@ -385,9 +387,16 @@
     "    axes[i+4][0].set_ylim(sel_lim)\n",
     "\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.png'.format(orbit, sroi))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
