--- a/figure4.ipynb
+++ b/figure4.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# MMS SITL Ground Loop: Figure 4\n",
-    "This notebook reproduces Figure 4 of **Argall, Small, et al. 2020**.\n",
+    "This notebook reproduces Figure 4 of Argall, Small, et al. 2020.\n",
     "\n",
     "**CONTENTS**\n",
     "* [Front Matter](#front_matter)\n",
@@ -58,7 +58,8 @@
    "outputs": [],
    "source": [
     "sroi = 1\n",
-    "outdir = pymms.config['dropbox_root'] + '/gls_figures/'\n",
+    "outdir = pymms.config['gls_root'] + '/gls_paper'\n",
+    "fig_type = 'svg' # png, jpg, svg, eps, ...\n",
     "start_date = dt.datetime(2019, 10, 19)\n",
     "end_date = dt.datetime(2020, 3, 25, 18, 44, 46)\n",
     "\n",
@@ -69,7 +70,9 @@
     "\n",
     "# Location to save the figure\n",
     "if outdir is not None:\n",
-    "    outdir = pathlib.Path(outdir).expanduser()"
+    "    outdir = pathlib.Path(outdir).expanduser()\n",
+    "    if not outdir.exists():\n",
+    "        outdir.mkdir(parents=True)"
    ]
   },
   {
@@ -345,22 +348,8 @@
     "                             nbins=nbins)\n",
     "ax, abs_mp_gls = plot_metric(abs_mp_data, gls_data, fig,\n",
     "                             ('ABS MP', 'GLS'), (4, 3, nrows, ncols),\n",
-    "                             nbins=nbins)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save the figure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                             nbins=nbins)\n",
+    "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
     "    sroi_str = ''\n",
@@ -371,7 +360,7 @@
     "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
     "                            end_date.strftime('%Y%m%d%H%M%S')\n",
     "                            )))\n",
-    "    filename = filename.with_suffix('.png')\n",
+    "    filename = filename.with_suffix('.'+fig_type)\n",
     "    plt.savefig(filename)"
    ]
   },
@@ -463,22 +452,8 @@
     "      set_labels=['SITL', 'ABS', 'GLS'],\n",
     "      alpha=0.4, ax=ax\n",
     "      )\n",
-    "plt.title('Magnetopause Selections')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save the figure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.title('Magnetopause Selections')\n",
+    "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
     "    sroi_str = ''\n",
@@ -489,7 +464,7 @@
     "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
     "                            end_date.strftime('%Y%m%d%H%M%S')\n",
     "                            )))\n",
-    "    filename = filename.with_suffix('.png')\n",
+    "    filename = filename.with_suffix('.'+fig_type)\n",
     "    plt.savefig(filename)"
    ]
   },
@@ -636,6 +611,7 @@
     "tai_sroi = pd.Index(t)\n",
     "df = pd.DataFrame(index=tai_sroi)\n",
     "df['sitl'] = np.zeros(npts, dtype='bool')\n",
+    "df['sitl_mp'] = np.zeros(npts, dtype='bool')\n",
     "df['abs'] = np.zeros(npts, dtype='bool')\n",
     "df['gls'] = np.zeros(npts, dtype='bool')\n",
     "\n",
@@ -652,52 +628,97 @@
     "# cycle.\n",
     "for segment in sitl_data:\n",
     "    df.loc[segment.taistarttime:segment.taiendtime, 'sitl'] = True\n",
+    "for segment in sitl_mp_data:\n",
+    "    df.loc[segment.taistarttime:segment.taiendtime, 'sitl_mp'] = True\n",
     "for segment in abs_data:\n",
     "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'abs'] = True\n",
     "for segment in gls_data:\n",
     "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'gls'] = True\n",
     "\n",
     "# Confusion matrix elements\n",
-    "gls = {}\n",
-    "gls['true_positive'] = (df.sitl & df.gls).sum()\n",
-    "gls['false_positive'] = (~df.sitl & df.gls).sum()\n",
-    "gls['true_negative'] = (~df.sitl & ~df.gls).sum()\n",
-    "gls['false_negative'] = (df.sitl & ~df.gls).sum()\n",
-    "gls['recall'] = (gls['true_positive']\n",
-    "                 / (gls['true_positive'] + gls['false_negative']))\n",
-    "gls['precision'] = (gls['true_positive']\n",
-    "                    / (gls['true_positive'] + gls['false_positive']))\n",
-    "gls['f1_score'] = 2 * (gls['precision'] * gls['recall']) / (gls['precision'] + gls['recall'])\n",
+    "gls_score = {}\n",
+    "gls_score['true_positive'] = (df.sitl & df.gls).sum()\n",
+    "gls_score['false_positive'] = (~df.sitl & df.gls).sum()\n",
+    "gls_score['true_negative'] = (~df.sitl & ~df.gls).sum()\n",
+    "gls_score['false_negative'] = (df.sitl & ~df.gls).sum()\n",
+    "gls_score['recall'] = (gls_score['true_positive']\n",
+    "                       / (gls_score['true_positive'] + gls_score['false_negative'])\n",
+    "                      )\n",
+    "gls_score['precision'] = (gls_score['true_positive']\n",
+    "                          / (gls_score['true_positive'] + gls_score['false_positive'])\n",
+    "                         )\n",
+    "gls_score['f1_score'] = (2 * (gls_score['precision'] * gls_score['recall']) \n",
+    "                         / (gls_score['precision'] + gls_score['recall'])\n",
+    "                        )\n",
     "\n",
-    "abs = {}\n",
-    "abs['true_positive'] = (df.sitl & df['abs']).sum()\n",
-    "abs['false_positive'] = (~df.sitl & df['abs']).sum()\n",
-    "abs['true_negative'] = (~df.sitl & ~df['abs']).sum()\n",
-    "abs['false_negative'] = (df.sitl & ~df['abs']).sum()\n",
-    "abs['recall'] = (abs['true_positive']\n",
-    "                 / (abs['true_positive'] + abs['false_negative']))\n",
-    "abs['precision'] = (abs['true_positive']\n",
-    "                    / (abs['true_positive'] + abs['false_positive']))\n",
-    "abs['f1_score'] = 2 * (abs['precision'] * abs['recall']) / (abs['precision'] + abs['recall'])\n",
+    "# Compare to only the MP crossings\n",
+    "gls_mp_score = {}\n",
+    "gls_mp_score['true_positive'] = (df.sitl_mp & df.gls).sum()\n",
+    "gls_mp_score['false_positive'] = (~df.sitl_mp & df.gls).sum()\n",
+    "gls_mp_score['true_negative'] = (~df.sitl_mp & ~df.gls).sum()\n",
+    "gls_mp_score['false_negative'] = (df.sitl_mp & ~df.gls).sum()\n",
+    "gls_mp_score['recall'] = (gls_mp_score['true_positive']\n",
+    "                          / (gls_mp_score['true_positive'] + gls_mp_score['false_negative'])\n",
+    "                         )\n",
+    "gls_mp_score['precision'] = (gls_mp_score['true_positive']\n",
+    "                             / (gls_mp_score['true_positive'] + gls_mp_score['false_positive'])\n",
+    "                            )\n",
+    "gls_mp_score['f1_score'] = (2 * (gls_mp_score['precision'] * gls_mp_score['recall'])\n",
+    "                            / (gls_mp_score['precision'] + gls_mp_score['recall'])\n",
+    "                           )\n",
+    "\n",
+    "abs_score = {}\n",
+    "abs_score['true_positive'] = (df.sitl & df['abs']).sum()\n",
+    "abs_score['false_positive'] = (~df.sitl & df['abs']).sum()\n",
+    "abs_score['true_negative'] = (~df.sitl & ~df['abs']).sum()\n",
+    "abs_score['false_negative'] = (df.sitl & ~df['abs']).sum()\n",
+    "abs_score['recall'] = (abs_score['true_positive']\n",
+    "                       / (abs_score['true_positive'] + abs_score['false_negative'])\n",
+    "                      )\n",
+    "abs_score['precision'] = (abs_score['true_positive']\n",
+    "                          / (abs_score['true_positive'] + abs_score['false_positive'])\n",
+    "                         )\n",
+    "abs_score['f1_score'] = (2 * (abs_score['precision'] * abs_score['recall'])\n",
+    "                         / (abs_score['precision'] + abs_score['recall'])\n",
+    "                        )\n",
     "\n",
     "# Print Results\n",
-    "print('GLS:')\n",
-    "print('  True Positive:  {}'.format(gls['true_positive']))\n",
-    "print('  False Positive: {}'.format(gls['false_positive']))\n",
-    "print('  True Negative:  {}'.format(gls['true_negative']))\n",
-    "print('  False Negative: {}'.format(gls['false_negative']))\n",
-    "print('  Precision:      {}'.format(gls['precision']))\n",
-    "print('  Recall:         {}'.format(gls['recall']))\n",
-    "print('  F1 Score:       {}'.format(gls['f1_score']))\n",
+    "print('SITL')\n",
+    "print('  # Points:       {}'.format(len(df.sitl)))\n",
+    "print('  # Selections:   {}'.format(sum(df.sitl)))\n",
+    "print('  % Selected:     {0:0.2f}%'.format(sum(df.sitl)/len(df.sitl)*100))\n",
+    "print('GLS (All):')\n",
+    "print('  True Positive:  {}'.format(gls_score['true_positive']))\n",
+    "print('  False Positive: {}'.format(gls_score['false_positive']))\n",
+    "print('  True Negative:  {}'.format(gls_score['true_negative']))\n",
+    "print('  False Negative: {}'.format(gls_score['false_negative']))\n",
+    "print('  Precision:      {0:0.4f}'.format(gls_score['precision']))\n",
+    "print('  Recall:         {0:0.4f}'.format(gls_score['recall']))\n",
+    "print('  F1 Score:       {0:0.4f}'.format(gls_score['f1_score']))\n",
+    "print('GLS (MP):')\n",
+    "print('  True Positive:  {}'.format(gls_mp_score['true_positive']))\n",
+    "print('  False Positive: {}'.format(gls_mp_score['false_positive']))\n",
+    "print('  True Negative:  {}'.format(gls_mp_score['true_negative']))\n",
+    "print('  False Negative: {}'.format(gls_mp_score['false_negative']))\n",
+    "print('  Precision:      {0:0.4f}'.format(gls_mp_score['precision']))\n",
+    "print('  Recall:         {0:0.4f}'.format(gls_mp_score['recall']))\n",
+    "print('  F1 Score:       {0:0.4f}'.format(gls_mp_score['f1_score']))\n",
     "print('ABS:')\n",
-    "print('  True Positive:  {}'.format(abs['true_positive']))\n",
-    "print('  False Positive: {}'.format(abs['false_positive']))\n",
-    "print('  True Negative:  {}'.format(abs['true_negative']))\n",
-    "print('  False Negative: {}'.format(abs['false_negative']))\n",
-    "print('  Precision:      {}'.format(abs['precision']))\n",
-    "print('  Recall:         {}'.format(abs['recall']))\n",
-    "print('  F1 Score:       {}'.format(abs['f1_score']))"
+    "print('  True Positive:  {}'.format(abs_score['true_positive']))\n",
+    "print('  False Positive: {}'.format(abs_score['false_positive']))\n",
+    "print('  True Negative:  {}'.format(abs_score['true_negative']))\n",
+    "print('  False Negative: {}'.format(abs_score['false_negative']))\n",
+    "print('  Precision:      {0:0.4f}'.format(abs_score['precision']))\n",
+    "print('  Recall:         {0:0.4f}'.format(abs_score['recall']))\n",
+    "print('  F1 Score:       {0:0.4f}'.format(abs_score['f1_score']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
